stDemoOne/force-app/main/default/objects/xdo_dc_Timeline_Activity__c/fields/Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Days_Ago__c</fullName>
    <label>Days Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>