stDemoOne/force-app/main/default/objects/xdo_dc_Timeline_Activity__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <inlineHelpText>Description of activity, displays under title</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>