stDemoOne/force-app/main/default/objects/xdo_dc_Timeline_Activity__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Use this field to sort events on the same day. Component sorts events by Order value in DESC</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>