stDemoOne/force-app/main/default/objects/xdo_dc_Timeline_Activity__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>