stDemoOne/force-app/main/default/objects/xdo_dc_Timeline_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>title__c</columns>
    <columns>description__c</columns>
    <columns>Days_Ago__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>